[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/Fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://RigidBody.gd" type="Script" id=2]
[ext_resource path="res://assets/Models/maleNewRun.glb" type="PackedScene" id=3]
[ext_resource path="res://Camera.gd" type="Script" id=4]
[ext_resource path="res://ActualGame.gd" type="Script" id=5]
[ext_resource path="res://assets/Textures/line_straihgt.png" type="Texture" id=6]
[ext_resource path="res://assets/Models/newFemaleCh.glb" type="PackedScene" id=7]
[ext_resource path="res://assets/Textures/pointing.png" type="Texture" id=8]
[ext_resource path="res://Tutorial.gd" type="Script" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=9]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=15]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=16]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 209, 379 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -500, 0 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "Tutorial"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 209, 379 ), Vector2( 290, 379 ), Vector2( 209, 379 ), Vector2( 70, 379 ), Vector2( 209, 379 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "TutorialIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -500, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "TutorialOut"
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -500, 0 ) ]
}

[sub_resource type="DynamicFont" id=19]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="BoxShape" id=11]
extents = Vector3( 0.38575, 0.560107, 0.239072 )

[sub_resource type="ProceduralSky" id=12]
sky_top_color = Color( 1, 1, 1, 1 )
sky_energy = 5.0
ground_energy = 2.0
sun_energy = 5.0
texture_size = 0

[sub_resource type="Environment" id=13]
background_mode = 2
background_sky = SubResource( 12 )

[sub_resource type="BoxShape" id=14]
extents = Vector3( 1.04595, 0.104729, 1.18485 )

[node name="ActualGame" type="Spatial"]
script = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Button" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -178.0
margin_top = -318.0
margin_bottom = 314.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -318.0
margin_right = 172.0
margin_bottom = 316.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
align = 0

[node name="HighScore - RichTextLabel" type="RichTextLabel" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -94.0
margin_top = 38.0
margin_right = 99.0
margin_bottom = 117.0
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "[center]0[/center]"
text = "0"

[node name="SpeedText" type="RichTextLabel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -179.0
margin_top = -125.0
margin_right = 179.0
margin_bottom = -88.0
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]
offset = Vector2( -500, 0 )
transform = Transform2D( 1, 0, 0, 1, -500, 0 )
script = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="Control/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.301961 )

[node name="HighScore - RichTextLabel2" type="RichTextLabel" parent="Control/CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -133.0
margin_top = 120.0
margin_right = 152.0
margin_bottom = 216.0
custom_fonts/normal_font = SubResource( 15 )
bbcode_enabled = true
bbcode_text = "[center]TUTORIAL[/center]"
text = "TUTORIAL"

[node name="HighScore - RichTextLabel3" type="RichTextLabel" parent="Control/CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -166.0
margin_top = 463.0
margin_right = 168.0
margin_bottom = 572.0
custom_fonts/normal_font = SubResource( 16 )
bbcode_enabled = true
bbcode_text = "[center]SWIPE LEFT/RIGHT[/center]"
text = "SWIPE LEFT/RIGHT"

[node name="Sprite" type="Sprite" parent="Control/CanvasLayer"]
position = Vector2( 179, 297 )
scale = Vector2( 2.67188, 1 )
texture = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="Control/CanvasLayer"]
position = Vector2( 209, 379 )
scale = Vector2( 0.405956, 0.313996 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/CanvasLayer"]
anims/RESET = SubResource( 17 )
anims/Tutorial = SubResource( 18 )
anims/TutorialIn = SubResource( 20 )
anims/TutorialOut = SubResource( 21 )

[node name="Button" type="Button" parent="Control/CanvasLayer"]
margin_left = 109.0
margin_top = 578.0
margin_right = 249.0
margin_bottom = 617.0
custom_fonts/font = SubResource( 19 )
text = "OK"

[node name="KinematicBody" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.17136 )
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody"]
transform = Transform( 0.65, -1.49012e-08, 1.89245e-06, -4.76837e-07, 0.649999, -4.76837e-07, -1.04308e-07, -7.45058e-08, 0.650001, 0.0117445, 1.38922, -1.44069 )
shape = SubResource( 11 )

[node name="Camera" type="Camera" parent="KinematicBody"]
transform = Transform( 0.5, 0.433013, -0.75, 0, 0.866025, 0.5, 0.866025, -0.25, 0.433013, -9.052, 8, 5 )
environment = SubResource( 13 )
fov = 30.0
script = ExtResource( 4 )

[node name="newFemaleCh" parent="KinematicBody" instance=ExtResource( 7 )]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 1.1, -1.441 )
visible = false

[node name="maleNewRun" parent="KinematicBody" instance=ExtResource( 3 )]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 1.1, -1.441 )
visible = false

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.17136 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.992561, 0, 0.9, -1.41534 )
shape = SubResource( 14 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.823235, 0.264329, -0.502408, 0.0643541, 0.835831, 0.545201, 0.564041, -0.481161, 0.671075, -1.05203, 2.35962, 2.0556 )
light_energy = 0.15

[connection signal="pressed" from="Control/Button" to="KinematicBody/Camera" method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Button2" to="KinematicBody/Camera" method="_on_Button2_pressed"]
[connection signal="animation_finished" from="Control/CanvasLayer/AnimationPlayer" to="Control/CanvasLayer" method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="Control/CanvasLayer/Button" to="Control/CanvasLayer" method="_on_Button_pressed"]
